# toy-processor

./: Cargo.toml  README.md
.beads/: issues.jsonl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: transaction_processor.rs
src/: account.rs  deposit_store.rs  error.rs  lib.rs  main.rs
src/transactions/: chargeback_tx.rs  deposit_tx.rs  dispute_tx.rs  mod.rs  resolve_tx.rs  withdrawal_tx.rs
tests/: integration.rs
tests/fixtures/: basic_deposit_withdraw.csv  dispute_nonexistent.csv  double_dispute.csv  insufficient_funds.csv  locked_account_rejects.csv  negative_amount.csv  negative_balance_clawback.csv  precision.csv  whitespace.csv  zero_amount.csv
