[package]
name = "toy-processor"
version = "0.1.0"
edition = "2024"

[lib]
name = "toy_processor"
path = "src/lib.rs"

[[bin]]
name = "toy-processor"
path = "src/main.rs"

[dependencies]
bloomfilter = "3.0.1"
csv = "1.4.0"
env_logger = "0.11.8"
log = "0.4.29"
rust_decimal = { version = "1.39.0", features = ["serde-with-str"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
